--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bufferutil": "^4.0.7",
+    "express": "^4.18.2",
+    "utf-8-validate": "^5.0.10",
     "ws": "^8.9.0"
   }
 }
